"""
Fixed transaction cost model implementation.
"""
import pandas as pd
from src.core.IFrictionModel import IFrictionModel


class FixedTransactionCostModel(IFrictionModel):
    """
    Friction model that applies a fixed monetary cost to every trade, converting it to a percentage return deduction.
    Follows OCP and LSP by adhering to the IFrictionModel interface.
    """

    def __init__(self, fixed_amount: float) -> None:
        """
        Initializes the fixed transaction cost model.

        Args:
            fixed_amount (float): The absolute monetary cost applied per trade (e.g., 2.00 USD).
        """
        self._fixed_amount = fixed_amount

    def calculate_friction(self, prices: pd.DataFrame, signals: pd.Series) -> pd.Series:
        """
        Calculates the friction costs vectorially using fixed amounts relative to the asset price.
        
        Mathematical Formulation: \(C_t = |S_{t-1} - S_{t-2}| \times \frac{c_{fixed}}{P_t}\)
        where \(S_t\) is the target signal at time \(t\), \(c_{fixed}\) is the fixed cost, and \(P_t\) is the asset price at time \(t\).

        Args:
            prices (pd.DataFrame): Time-series of asset prices containing at least 'close'.
            signals (pd.Series[int]): Trading signals generated by the strategy.

        Returns:
            pd.Series[float]: Series representing the friction costs per period as a percentage.

        Complexity:
            Time: O(N) asymptotically via pandas vectorization.
            Space: O(N) array allocation.
        """
        # Shift signals by 1 to represent the actual held position
        shifted_signals = signals.shift(1).fillna(0)
        
        # Calculate the absolute difference in held position to determine trade volume
        trade_delta = shifted_signals.diff().fillna(0).abs()
        
        # Calculate cost relative to the closing price to represent it as a return deduction
        costs = trade_delta * (self._fixed_amount / prices['close'])
        
        return pd.Series(costs, dtype=float).fillna(0)
