"""
Interface representing a friction model.
"""
from abc import ABC, abstractmethod
import pandas as pd


class IFrictionModel(ABC):
    """
    Interface representing a friction model (e.g., transaction costs, slippage).
    """
    @abstractmethod
    def calculate_friction(self, prices: pd.DataFrame, signals: pd.Series) -> pd.Series:
        """
        Calculates the friction costs vectorially.

        Args:
            prices (pd.DataFrame): Time-series of asset prices.
            signals (pd.Series[int]): Trading signals generated by the strategy.

        Returns:
            pd.Series[float]: Series representing the friction costs per period.
        """
        pass
