"""
Proportional friction model implementation.
"""
import pandas as pd
from src.core.IFrictionModel import IFrictionModel


class ProportionalFrictionModel(IFrictionModel):
    """
    Friction model that applies a proportional cost to every unit traded.
    Follows OCP and LSP by strictly adhering to the IFrictionModel interface.
    """

    def __init__(self, proportional_rate: float) -> None:
        """
        Initializes the proportional friction model.

        Args:
            proportional_rate (float): The cost rate applied to the traded volume.
                                       For example, 0.001 represents a 0.1% cost per trade.
        """
        self._proportional_rate = proportional_rate

    def calculate_friction(self, prices: pd.DataFrame, signals: pd.Series) -> pd.Series:
        """
        Calculates the friction costs vectorially using proportional rates.
        
        Mathematical Formulation: \(C_t = |S_{t-1} - S_{t-2}| \times c_{prop}\)
        where \(S_t\) is the target signal at time \(t\) and \(c_{prop}\) is the proportional rate.

        Args:
            prices (pd.DataFrame): Time-series of asset prices (unused in this specific model).
            signals (pd.Series[int]): Trading signals generated by the strategy.

        Returns:
            pd.Series[float]: Series representing the friction costs per period in percentage.

        Complexity:
            Time: O(N) asymptotically via pandas vectorization.
            Space: O(N) array allocation.
        """
        # Shift signals by 1 to represent the actual held position
        shifted_signals = signals.shift(1).fillna(0)
        
        # Calculate the absolute difference in held position to determine trade volume
        trade_delta = shifted_signals.diff().fillna(0).abs()
        
        # Calculate cost
        costs = trade_delta * self._proportional_rate
        
        return pd.Series(costs, dtype=float)
